--- a/app/views/layouts/admin.slim
+++ b/app/views/layouts/admin.slim
@@ -3,7 +3,7 @@ html#no-js lang="ru"
   head
     meta charset="utf-8"
 
-    title= 'ChatbotTemplate'
+    title= 'ChatbotAdmin'
 
     meta name="viewport" content="width=1000, initial-scale=1"
 
