--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -3,7 +3,7 @@ html#no-js lang="ru"
   head
     meta charset="utf-8"
 
-    title= 'ChatbotTemplate'
+    title= 'ChatbotAdmin'
     meta name="description" content=''
 
     meta name="viewport" content="width=device-width, initial-scale=1"
