--- a/app/views/admin/customers/index.slim
+++ b/app/views/admin/customers/index.slim
@@ -23,8 +23,7 @@
               td= customer.adapter_name
               td= customer.email
               td= t("admin.customers.notifications.#{customer.notification}")
-              td= customer.created_at
-                / format_date customer.created_at
+              td= format_date customer.created_at
               td.table-list__check
                 = admin_cb(customer)
 
